# zuspec-fe-parser

./: .env  .gitignore  CMakeLists.txt  README.md  ivpm.yaml  setup.py
.github/workflows/: ci.yml
doc/: Ast2ArlSymbolStack.md  SymbolRefResolution.md
python/: core.pyx
python/zsp_fe_parser/: __init__.py  core.pxd  decl.pxd  pkginfo.py
scripts/: build_linux.sh
src/: Ast2ArlBuilder.cpp  Ast2ArlBuilder.h  Ast2ArlContext.cpp  Ast2ArlContext.h  CMakeLists.txt  ElemFactoryAddrClaim.cpp  ElemFactoryAddrClaim.h  ElemFactoryAddrHandle.cpp  ElemFactoryAddrHandle.h  ElemFactoryArray.cpp  ElemFactoryArray.h  ElemFactoryList.cpp  ElemFactoryList.h  ElemFactoryPackedStruct.cpp  ElemFactoryPackedStruct.h  ElemFactoryPyObj.cpp  ElemFactoryPyObj.h  ElemFactoryReg.cpp  ElemFactoryReg.h  ElemFactoryRegGroup.cpp  ElemFactoryRegGroup.h  ElemFactoryTransparentAddrClaim.cpp  ElemFactoryTransparentAddrClaim.h  ElemFactoryTransparentAddrSpace.cpp  ElemFactoryTransparentAddrSpace.h  Factory.cpp  Factory.h  TaskBuildActivity.cpp  TaskBuildActivity.h  TaskBuildConstraint.cpp  TaskBuildConstraint.h  TaskBuildDataType.cpp  TaskBuildDataType.h  TaskBuildDataTypeFunction.cpp  TaskBuildDataTypeFunction.h  TaskBuildDataTypeReg.cpp  TaskBuildDataTypeReg.h  TaskBuildEnumType.cpp  TaskBuildEnumType.h  TaskBuildExecBody.cpp  (+32 more)
src/include/zsp/fe/parser/: FactoryExt.h  IAst2ArlBuilder.h  IAst2ArlContext.h  IElemFactoryAssocData.h  IFactory.h
src/include/zsp/fe/parser/impl/: ElemFactoryAssocDataBase.h  TaskIsTopDownScope.h
tests/: CMakeLists.txt
tests/python/: test_base.py  test_smoke.py
tests/src/: TestActivities.cpp  TestActivities.h  TestAddrRegPkg.cpp  TestAddrRegPkg.h  TestAst2ArlBasics.cpp  TestAst2ArlBasics.h  TestBase.cpp  TestBase.h  TestBlogExamples.cpp  TestBlogExamples.h  TestConstraints.cpp  TestConstraints.h  TestFunctions.cpp  TestFunctions.h  TestRegisters.cpp  TestRegisters.h  TestTypeInheritance.cpp  TestTypeInheritance.h  TestTypeTemplate.cpp  TestTypeTemplate.h
